--- a/packages/boot/packages/common/package.json
+++ b/packages/boot/packages/common/package.json
@@ -1,6 +1,6 @@
 {
   "name": "loca-boot-common",
-  "version": "1.7.39",
+  "version": "1.7.47",
   "description": "loca boot common",
   "main": "lib/index.js",
   "module": "lib/index.js",
@@ -27,5 +27,6 @@
     "test": "tests"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "gitHead": "40eb0d45f1fa2b6667ff87a9c9271df7fcb9d325"
 }
