--- a/packages/boot/packages/core/package.json
+++ b/packages/boot/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "loca-boot-core",
-  "version": "1.7.39",
+  "version": "1.7.47",
   "description": "loca boot core",
   "main": "lib/index.js",
   "module": "lib/index.js",
@@ -26,8 +26,9 @@
   },
   "dependencies": {
     "deepmerge": "^2.2.1",
-    "loca-boot-common": "^1.7.39",
-    "loca-boot-service": "^1.7.39",
+    "loca-boot-common": "^1.7.47",
+    "loca-boot-service": "^1.7.47",
     "reflect-metadata": "^0.1.13"
-  }
+  },
+  "gitHead": "40eb0d45f1fa2b6667ff87a9c9271df7fcb9d325"
 }
