--- a/packages/boot/packages/service/package.json
+++ b/packages/boot/packages/service/package.json
@@ -1,6 +1,6 @@
 {
   "name": "loca-boot-service",
-  "version": "1.7.39",
+  "version": "1.7.47",
   "description": "loca boot service",
   "main": "lib/index.js",
   "module": "lib/index.js",
@@ -17,5 +17,6 @@
   "publishConfig": {
     "registry": "https://registry.npmjs.org"
   },
-  "scripts": {}
+  "scripts": {},
+  "gitHead": "40eb0d45f1fa2b6667ff87a9c9271df7fcb9d325"
 }
