feat: 支持工厂函数去创建模型，创建模型的时候支持校验数据是否合法。

--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "unit": "npm run test:unit",
     "test:unit": "jest"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/loca-spirit/loca-boot"
+  },
   "workspaces": [
     "packages/boot/packages/*"
   ],
