feat: update metedata surport ts5

--- a/packages/boot/package.json
+++ b/packages/boot/package.json
@@ -28,7 +28,7 @@
     "test": "jest"
   },
   "dependencies": {
-    "reflect-metadata": "0.1.12"
+    "reflect-metadata": "^0.2.2"
   },
   "devDependencies": {
   }
