--- a/package.json
+++ b/package.json
@@ -13,23 +13,22 @@
     "type": "git",
     "url": "https://github.com/loca-spirit/loca-boot"
   },
+  "homepage": "https://github.com/loca-spirit/loca-boot",
   "workspaces": [
     "packages/boot/packages/*"
   ],
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
+    "@types/jest": "^28.1.7",
+    "@types/node": "^18.19.39",
+    "jest": "28.1.3",
     "jest-cli": "28.1.3",
     "ts-jest": "^28.0.8",
-    "@types/jest": "^28.1.7",
-    "@types/node": "12.20.6",
-    "jest": "28.1.3",
-    "ts-node": "8.10.2",
-    "tslib": "2.4.0",
+    "tslib": "^2.6.3",
     "tslint": "5.12.0",
-    "typescript": "^4.5.5"
+    "typescript": "^5.5.2"
   },
   "volta": {
-    "node": "12.22.5"
+    "node": "18.17.0"
   }
 }
