--- a/packages/boot/packages/core/package.json
+++ b/packages/boot/packages/core/package.json
@@ -17,6 +17,11 @@
   "publishConfig": {
     "registry": "https://registry.npmjs.org"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/loca-spirit/loca-boot"
+  },
+  "homepage": "https://github.com/loca-spirit/loca-boot",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "sh build/build.sh",
