--- a/packages/boot/packages/service/package.json
+++ b/packages/boot/packages/service/package.json
@@ -17,6 +17,11 @@
   "publishConfig": {
     "registry": "https://registry.npmjs.org"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/loca-spirit/loca-boot"
+  },
+  "homepage": "https://github.com/loca-spirit/loca-boot",
   "scripts": {},
   "gitHead": "efac011afbbd0dd2cdc5d6c012d8bbc32421287e"
 }
