--- a/package.json
+++ b/package.json
@@ -24,14 +24,17 @@
     "loca-boot-service": "workspace:*"
   },
   "devDependencies": {
+    "@eslint/js": "^9.9.1",
     "@types/jest": "^28.1.7",
     "@types/node": "^18.19.39",
     "eslint": "^9.9.1",
+    "globals": "^15.9.0",
     "jest": "28.1.3",
     "jest-cli": "28.1.3",
     "ts-jest": "^28.0.8",
     "tslib": "^2.6.3",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "typescript-eslint": "^8.3.0"
   },
   "volta": {
     "yarn": "3.8.2",
