--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "vuepress dev docs",
-    "test": "vitest --run",
+    "test:unit": "jest",
     "build:lib": "yarn workspaces foreach --no-private -A -v run build:lib",
     "build:doc": "vuepress build docs --dest dist",
     "clean-cache": "rm -rf docs/.vuepress/.cache && rm -rf docs/.vuepress/.temp && rm -rf node_modules/.vite",
@@ -44,8 +44,6 @@
     "@types/prompts": "^2.0.14",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
-    "@vitest/coverage-c8": "^0.22.1",
-    "@vitest/ui": "^1.6.0",
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vuepress/bundler-vite": "^2.0.0-rc.9",
     "@vuepress/cli": "^2.0.0-rc.9",
@@ -80,12 +78,13 @@
     "prettier": "^2.8.7",
     "rollup": "^2.78.1",
     "rollup-plugin-esbuild": "^4.9.3",
+    "sass": "^1.82.0",
     "ts-jest": "^28.0.8",
     "tslib": "^2.6.3",
     "typescript": "^4.9.5",
     "typescript-eslint": "^8.3.0",
+    "unplugin-vue-define-options": "^1.5.2",
     "vite": "^5.2.11",
-    "vitest": "^0.22.1",
     "vuepress": "^2.0.0-rc.9",
     "vuepress-theme-hope": "^2.0.0-rc.63"
   },
