--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -17,14 +17,12 @@
   ],
   "author": "",
   "dependencies": {
-    "patch-package": "^6.4.7"
-  },
-  "directories": {
-    "deepmerge": "^2.2.1",
-    "tslib": "^2.8.0",
     "core-js": "^3.38.1",
+    "deepmerge": "^2.2.1",
     "loca-boot-common": "^1.73.6",
-    "reflect-metadata": "^0.1.13"
+    "patch-package": "^6.4.7",
+    "reflect-metadata": "^0.1.13",
+    "tslib": "^2.8.0"
   },
   "engineStrict": true,
   "sideEffects": false,
