--- a/packages/core/tsconfig.declaration.json
+++ b/packages/core/tsconfig.declaration.json
@@ -6,7 +6,7 @@
     "outDir": "lib",
     "declaration": true,
     "emitDeclarationOnly": true,
-    "noEmit": false,
+    "noEmit": false
   },
   "include": [
     "./src"
