fix: 支持lodash的克隆 支持没有启用useDefineForClassFields,通过createModel来创建,适配deno的node框架.支持嵌套类型的dto数据的校验. 支持model传入的新模式,重命名序列化和反序列化的方法名.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -57,13 +57,13 @@
     "baseUrl": ".",
     "paths": {
       "loca-boot-common": [
-        "./packages/common/src"
+        "packages/common/src/index.ts"
       ],
       "loca-boot-core": [
-        "./packages/core/src"
+        "packages/core/src/index.ts"
       ],
       "loca-boot-service": [
-        "./packages/service/src"
+        "packages/service/src/index.ts"
       ]
     }
   },
