--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "build:doc": "vuepress build docs --dest dist",
     "clean-cache": "rm -rf docs/.vuepress/.cache && rm -rf docs/.vuepress/.temp && rm -rf node_modules/.vite",
     "postinstall": "patch-package",
-    "pub": "lerna publish --no-git-tag-version --no-private --registry=https://registry.npmjs.org",
-    "v": "lerna version --no-git-tag-version --no-private"
+    "v": "lerna version --no-git-tag-version --no-private",
+    "pub": "lerna publish --no-git-tag-version --no-private --registry=https://registry.npmjs.org"
   },
   "author": "",
   "workspaces": [
@@ -76,12 +76,13 @@
     "posthtml-parser": "^0.11.0",
     "posthtml-render": "^3.0.0",
     "prettier": "^2.8.7",
+    "prettier-plugin-organize-imports": "^4.1.0",
     "rollup": "^2.78.1",
     "rollup-plugin-esbuild": "^4.9.3",
     "sass": "^1.82.0",
     "ts-jest": "^28.0.8",
     "tslib": "^2.6.3",
-    "typescript": "^4.9.5",
+    "typescript": "^5.3.3",
     "typescript-eslint": "^8.3.0",
     "unplugin-vue-define-options": "^1.5.2",
     "vite": "^5.2.11",
