--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "loca-boot-core",
-  "version": "1.73.10",
+  "version": "1.73.14",
   "description": "loca boot core",
   "main": "lib/index.js",
   "module": "lib/index.js",
@@ -16,7 +16,8 @@
   "dependencies": {
     "core-js": "^3.38.1",
     "deepmerge": "^2.2.1",
-    "loca-boot-common": "^1.73.10",
+    "loca-boot-common": "^1.73.14",
+    "lodash": "^4.17.21",
     "patch-package": "^6.4.7",
     "reflect-metadata": "^0.1.13",
     "tslib": "^2.8.0"
