--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "clean-cache": "rm -rf docs/.vuepress/.cache && rm -rf docs/.vuepress/.temp && rm -rf node_modules/.vite",
     "postinstall": "patch-package",
     "v": "lerna version --no-git-tag-version --no-private",
-    "pub": "lerna publish --no-git-tag-version --no-private --dist-tag next --registry=https://registry.npmjs.org && && node scripts/push-doc.js"
+    "pub": "lerna publish --no-git-tag-version --no-private --dist-tag next --registry=https://registry.npmjs.org  && node scripts/push-doc.mjs"
   },
   "author": "",
   "workspaces": [
