--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "scripts": {
     "dev": "vuepress dev docs",
     "test": "jest",
+    "build": "yarn build:lib && yarn build:doc",
     "build:lib": "yarn workspaces foreach --no-private -A -v run build:lib",
     "build:doc": "vuepress build docs --dest dist",
     "clean-cache": "rm -rf docs/.vuepress/.cache && rm -rf docs/.vuepress/.temp && rm -rf node_modules/.vite",
     "postinstall": "patch-package",
     "v": "lerna version --no-git-tag-version --no-private",
-    "pub": "lerna publish --no-git-tag-version --no-private --dist-tag next --registry=https://registry.npmjs.org"
+    "pub": "lerna publish --no-git-tag-version --no-private --dist-tag next --registry=https://registry.npmjs.org && node scripts/push-doc.mjs"
   },
   "author": "",
   "workspaces": [
@@ -54,10 +55,11 @@
     "@vuepress/plugin-shiki": "2.0.0-rc.0",
     "@vuepress/plugin-slimsearch": "2.0.0-rc.61",
     "@vuepress/shared": "^2.0.0-rc.9",
-    "@vuepress/utils": "^2.0.0-rc.9",
+    "basic-ftp": "^5.0.5",
     "components-helper": "^2.0.0",
     "conventional-changelog-cli": "^4.1.0",
     "cz-conventional-changelog": "^3.3.0",
+    "dotenv": "^16.5.0",
     "esbuild": "^0.15.5",
     "eslint": "^9.9.1",
     "eslint-plugin-prettier": "^3.3.1",
