--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "clean-cache": "rm -rf docs/.vuepress/.cache && rm -rf docs/.vuepress/.temp && rm -rf node_modules/.vite",
     "postinstall": "patch-package",
     "v": "lerna version --no-git-tag-version --no-private",
-    "pub": "lerna publish --no-git-tag-version --no-private --dist-tag next --registry=https://registry.npmjs.org && node scripts/push-doc.mjs"
+    "pub": "lerna publish --no-git-tag-version --no-private --dist-tag next --registry=https://registry.npmjs.org",
+    "upload": "node scripts/push-doc.mjs"
   },
   "author": "",
   "workspaces": [
@@ -52,9 +53,10 @@
     "@vuepress/client": "^2.0.0-rc.9",
     "@vuepress/markdown": "^2.0.0-rc.9",
     "@vuepress/plugin-prismjs": "^2.0.0-rc.21",
-    "@vuepress/plugin-shiki": "2.0.0-rc.0",
-    "@vuepress/plugin-slimsearch": "2.0.0-rc.61",
+    "@vuepress/plugin-shiki": "^2.0.0-rc.0",
+    "@vuepress/plugin-slimsearch": "^2.0.0-rc.61",
     "@vuepress/shared": "^2.0.0-rc.9",
+    "@vuepress/utils": "^2.0.0-rc.9",
     "basic-ftp": "^5.0.5",
     "components-helper": "^2.0.0",
     "conventional-changelog-cli": "^4.1.0",
@@ -82,6 +84,7 @@
     "rollup": "^2.78.1",
     "rollup-plugin-esbuild": "^4.9.3",
     "sass": "^1.82.0",
+    "shiki": "^3.5.0",
     "ts-jest": "^29.3.4",
     "tslib": "^2.6.3",
     "typescript": "^5.8.3",
