--- a/packages/service/package.json
+++ b/packages/service/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@model-base/service",
-  "version": "1.0.0",
+  "version": "1.0.1",
+  "private": false,
   "description": "loca boot service",
   "main": "lib/index.js",
   "module": "lib/index.js",
@@ -14,8 +15,7 @@
   ],
   "author": "",
   "dependencies": {
-    "@model-base/core": "^1.0.0",
-    "core-js": "^3.38.1",
+    "@model-base/core": "^1.0.1",
     "patch-package": "^6.4.7",
     "tslib": "^2.8.0"
   },
@@ -25,5 +25,9 @@
     "dist",
     "es",
     "lib"
-  ]
+  ],
+  "publishConfig": {
+    "access": "public"
+  },
+  "gitHead": "7701f800128679fe19e5181dd4bfed07d47f010d"
 }
