--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@model-base/common",
-  "version": "1.0.0",
+  "version": "1.0.1",
+  "private": false,
   "description": "model-base common",
   "main": "lib/index.js",
   "module": "lib/index.js",
@@ -14,7 +15,6 @@
   ],
   "author": "",
   "dependencies": {
-    "core-js": "^3.38.1",
     "patch-package": "^6.4.7",
     "tslib": "^2.8.0"
   },
@@ -24,5 +24,9 @@
     "dist",
     "es",
     "lib"
-  ]
+  ],
+  "publishConfig": {
+    "access": "public"
+  },
+  "gitHead": "7701f800128679fe19e5181dd4bfed07d47f010d"
 }
