--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@types/gulp-concat": "^0.0.33",
     "@types/gulp-sass": "^5.0.0",
     "@types/jest": "^28.1.7",
+    "@types/lodash": "^4.17.17",
     "@types/node": "^20.12.12",
     "@types/prompts": "^2.0.14",
     "@vitejs/plugin-vue": "^5.0.4",
@@ -84,7 +85,6 @@
     "rollup": "^2.78.1",
     "rollup-plugin-esbuild": "^4.9.3",
     "sass": "^1.82.0",
-    "shiki": "^3.5.0",
     "ts-jest": "^29.3.4",
     "tslib": "^2.6.3",
     "typescript": "^5.8.3",
