--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,16 +13,15 @@
     "target": "es6",
     "outDir": "dist",
     "declaration": true,
-    "emitDeclarationOnly": true,
-    "downlevelIteration": true,
+    "emitDeclarationOnly": false,
+    "downlevelIteration": false,
     "importHelpers": true,
     "experimentalDecorators": false,
-    "emitDecoratorMetadata": false,
     "allowSyntheticDefaultImports": true,
     "module": "ESNext",
     "moduleResolution": "Node",
     "resolveJsonModule": true,
-    "useDefineForClassFields": true,
+    "useDefineForClassFields": false,
     // Required in Vue projects
     "jsx": "preserve",
     // `"noImplicitThis": true` is part of `strict`
